infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: git-tix.dev
      http:
        paths:
          - path: /api/auth/?(.*)
            backend:
              serviceName: auth-service-cluster-ip
              servicePort: 4000
